<resources>
    <string name="app_name">StudentFacultyPortal</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_shareidea">Share Your Idea</string>
    <string name="prompt_title">Title</string>
    <string name="prompt_desc">Description (optional)</string>
    <string name="prompt_type">Type</string>
    <string name="prompt_dev">Development</string>
    <string name="prompt_res">Research</string>
    <string name="action_submit">Submit</string>
    <string name="share_idea_header_btn">Share Idea</string>
    <string name="home_header_btn">Home</string>
    <string name="profile_header_btn">Profile</string>
    <string name="logout_header_btn">logout</string>
    <string name="base_url">http://192.168.43.231:8888/api/</string>
</resources>
