<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ShareIdeaActivity"
    android:background="@color/colorPrimary"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:background="@color/colorWhite"
        android:layout_margin="@dimen/text_margin"
        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text= "@string/prompt_shareidea"
            android:textSize="@dimen/text_heading_size"
            android:textAlignment="center"
            android:layout_margin="@dimen/text_heading_margin"
            android:textColor="@color/colorPrimaryDark"/>
        <!-- Login progress -->

        <!-- <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/colorPrimary"
             android:layout_margin="@dimen/text_margin"
             >
             <EditText
                 android:id="@+id/et_shareidea_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/prompt_title"
                 android:inputType="text"
                 android:maxLines="1"
                 android:singleLine="true"
                 />


         </android.support.design.widget.TextInputLayout>

         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/text_margin">
             <EditText
                 android:id="@+id/et_shareidea_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/prompt_desc"
                 android:inputType="textImeMultiLine"
                 android:singleLine="true" />

         </android.support.design.widget.TextInputLayout>!-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_type"
            android:singleLine="true"
            android:textSize="@dimen/text_size"
            android:padding="@dimen/text_padding"
            />
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >
            <RadioButton android:id="@+id/radio_dev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_dev"
                android:padding="@dimen/radio_button_padding"
                />
            <RadioButton android:id="@+id/radio_res"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_res"
                android:padding="@dimen/radio_button_padding"
                />
        </RadioGroup>
        <Button
            android:id="@+id/btn_shareidea_submit"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_submit"
            android:textStyle="bold"
            android:padding="@dimen/text_padding"
            android:layout_margin="@dimen/text_margin"
            android:background="@color/colorButton"/>
    </LinearLayout>
</RelativeLayout>
